edited ostrich profile pic

--- a/lib2024/final/index.html
+++ b/lib2024/final/index.html
@@ -201,7 +201,7 @@
 				<!--Profile Transfer Code Begins Here-->
 				<h2 class="spec-font">Profile Info</h2>
 				<div>
-					<img src="img/orstrich2.jpg" alt="Surprised Ostrich Profile Picture" width="">
+					<img src="img/ostrich2.jpg" alt="Surprised Ostrich Profile Picture" width="300px" height="165px">
 					<!--Name Result-->
 					<p class="spec-font"><span id="name_result"></span></p>
 					<!--Email Result-->
