--- a/lib2024/final/index.html
+++ b/lib2024/final/index.html
@@ -283,6 +283,7 @@
 				<address>
 					<p>6969 Avian Alley</p>
 					<p>Pigeon Island, ON Q0Q O3O</p>
+					<p>Canada</p>
 				</address>
 			</section>
 			<!--Address Information Ends here-->
