edited footer quick links

--- a/lib2024/final/index.html
+++ b/lib2024/final/index.html
@@ -231,16 +231,16 @@
 				<nav class="footer-nav">
 					<ul>
 						<li>
-							<a href="https://www.orbitalollie.com/schedule"></a>
+							<a href="https://www.orbitalollie.com/schedule">Schedule</a>
 						</li>
 						<li>
-							<a href="https://www.orbitalollie.com/about"></a>
+							<a href="https://www.orbitalollie.com/about">About</a>
 						</li>
 						<li>
-							<a href="https://www.orbitalollie.com/portolio"></a>
+							<a href="https://www.orbitalollie.com/portfolio">Portfolio</a>
 						</li>
 						<li>
-							<a href="https://www.orbitalollie.com/contact"></a>
+							<a href="https://www.orbitalollie.com/contact">Contact</a>
 						</li>
 					</ul>
 				</nav>
