edited final sss

--- a/lib2024/final/sss.html
+++ b/lib2024/final/sss.html
@@ -6,12 +6,13 @@
 <body>
 	<!--General Page Information Here --> 
 	<h1>Orbital Ollie</h1>
-	<h2>Target Screen:</h2>
-	Desktop, Mobile
-	<h3>Prototype Image Link:</h3> <a href="img/final-mockup.jpg">Click to see the mock-up</a>
+	<h3>Target Screen:</h3>
+	<p>Desktop, Mobile</p>
+	<p><b>Prototype Image Link:</b> <a href="img/final-mockup.jpg">Click to see the mock-up</a></p>
 	<!--General Page Information Ends here-->
 
 	<!--Page Dimensions Table Begins Here-->
+	<h3>Dimensions:</h3>
 	<table>
 		<thead>
 			<tr>
@@ -81,7 +82,7 @@
 	<!--Page Dimensions Table Ends Here-->
 
 	<!--Colors Table Begins Here-->
-	<h2>Colors</h2>
+	<h3>Colors:</h3>
 	<table>
 		<thead>
 			<tr>
