added background image, added font, url information

--- a/lib2024/final/sss.html
+++ b/lib2024/final/sss.html
@@ -94,5 +94,40 @@
 			</tr>
 		</thead>
 	</table>
+	<h3>Fonts:</h3>
+	<table>
+		<thead>
+			<th>Name</th>
+			<th>Use</th>
+			<th>Size</th>
+			<th>Weight</th>
+		</thead>
+		<tbody>
+			<tr>
+				<td>Noto Sans</td>
+				<td>Body Text</td>
+				<td>16px</td>
+				<td>normal</td>
+			</tr>
+			<tr>
+				<td>Peace Sans</td>
+				<td>Header Logo</td>
+				<td>Auto</td>
+				<td>normal</td>
+			</tr>
+		</tbody>
+	</table>
+	<h3>URLs:</h3>
+	<ul>
+		<li>Noto Sans:<a href="https://fonts.google.com/specimen/Noto+Sans">https://fonts.google.com/specimen/Noto+Sans</a></li>
+		<li>Peace Sans:<a href="https://www.fontsquirrel.com/fonts/peace-sans?filter%5Bclassifications%5D%5B0%5D=sans+serif&filter%5Btags%5D%5B0%5D=bold">https://www.fontsquirrel.com/fonts/peace-sans?filter%5Bclassifications%5D%5B0%5D=sans+serif&filter%5Btags%5D%5B0%5D=bold</a></li>
+	</ul>
+	<h3>Background Images:</h3>
+	<ul>
+		<li>
+			URL: <a href="https://www.toptal.com/designers/subtlepatterns/foggy-birds/">https://www.toptal.com/designers/subtlepatterns/foggy-birds/</a>
+		</li>
+		<li>Stlye: Foggy Birds</li>
+	</ul>
 </body>
 </html>
