added colour table, edited text

--- a/lib2024/final/sss.html
+++ b/lib2024/final/sss.html
@@ -93,6 +93,48 @@
 				<th>Opacity</th>
 			</tr>
 		</thead>
+		<tbody>
+			<tr>
+				<td>Black</td>
+				<td>Text</td>
+				<td>Primary</td>
+				<td>#000000</td>
+				<td>(0,0,0)</td>
+				<td>1</tr>
+			</tr>
+			<tr>
+				<td>Teal</td>
+				<td>Headings</td>
+				<td>Accent</td>
+				<td>#72a9ae</td>
+				<td>RGB(114,169,174)</td>
+				<td>1</td>
+			</tr>
+			<tr>
+				<td>Teal</td>
+				<td>Navigation</td>
+				<td>Accent</td>
+				<td>#72a9ae</td>
+				<td>RGB(114,169,174)</td>
+				<td>1</td>
+			</tr>
+			<tr>
+				<td>Grey</td>
+				<td>Footer</td>
+				<td>Accent</td>
+				<td>#454545</td>
+				<td>RGB(69,69,69)</td>
+				<td>1</td>
+			</tr>
+			<tr>
+				<td>White BG</td>
+				<td>Background</td>
+				<td>Primary</td>
+				<td>#ffffff</td>
+				<td>RGB(255,255,255)</td>
+				<td>1</td>
+			</tr>
+		</tbody>
 	</table>
 	<h3>Fonts:</h3>
 	<table>
@@ -127,7 +169,7 @@
 		<li>
 			URL: <a href="https://www.toptal.com/designers/subtlepatterns/foggy-birds/">https://www.toptal.com/designers/subtlepatterns/foggy-birds/</a>
 		</li>
-		<li>Stlye: Foggy Birds</li>
+		<li>Style: Foggy Birds</li>
 	</ul>
 </body>
 </html>
