--- a/lib2024/final/sss.html
+++ b/lib2024/final/sss.html
@@ -14,7 +14,7 @@
 	<!--Page Dimensions Table Begins Here-->
 	<h3>Dimensions:</h3>
 	<table>
-		<thead>
+		<thead style="text-align: center;">
 			<tr>
 				<th>Element</th>
 				<th>Width</th>
@@ -84,10 +84,11 @@
 	<!--Colors Table Begins Here-->
 	<h3>Colors:</h3>
 	<table>
-		<thead>
+		<thead style="text-align: center;">
 			<tr>
 				<th>Color</th>
 				<th>Used for</th>
+				<th>Used as</th>
 				<th>Hex Value</th>
 				<th>RGB Values</th>
 				<th>Opacity</th>
@@ -138,7 +139,7 @@
 	</table>
 	<h3>Fonts:</h3>
 	<table>
-		<thead>
+		<thead style="text-align: center;">
 			<th>Name</th>
 			<th>Use</th>
 			<th>Size</th>
