--- a/lib2024/final/index.html
+++ b/lib2024/final/index.html
@@ -73,7 +73,7 @@
 
 			<!--Main Content Code Begins Here-->
 			<section class="main-section">
-				<h2 class="spec-font">About Ollie</h2>
+				<h2>About Ollie</h2>
 				<p>
 					Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis rutrum mauris eu leo venenatis, ac suscipit lectus suscipit. Ut elementum sagittis leo, in varius ante volutpat vitae. Quisque tempor congue convallis. Morbi tristique metus posuere bibendum finibus. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Donec venenatis, orci ut tincidunt aliquet, velit dolor finibus tellus, vitae consequat neque purus in velit. In hac habitasse platea dictumst.
 				</p>
@@ -90,9 +90,9 @@
 
 			<!--Schedule Section Code Begins Here-->
 			<section class="schedule-section">
-				<h2 class="spec-font">Schedule</h2>
+				<h2>Schedule</h2>
 				<table class="sched-table">
-					<thead class="spec-font">
+					<thead>
 						<tr>
 							<td>Time</td>
 							<td>Monday</td>
@@ -142,7 +142,7 @@
 
 			<!--Profile Section Code Begins Here-->
 			<section class="profile-value-transfer cleafix">
-				<h2 class="spec-font">Edit Profile</h2>
+				<h2>Edit Profile</h2>
 				<form id="form" action="submit.php" method="post">
 					<!--Name Input-->
 					<p>
@@ -199,19 +199,19 @@
 				</form>
 
 				<!--Profile Transfer Code Begins Here-->
-				<h2 class="spec-font">Profile Info</h2>
-				<div>
+				<h2>Profile Info</h2>
+				<div id="fresults">
 					<img src="img/ostrich2.jpg" alt="Surprised Ostrich Profile Picture" width="300px" height="165px">
 					<!--Name Result-->
-					<p class="spec-font"><span id="name_result"></span></p>
+					<p><span id="name_result"></span></p>
 					<!--Email Result-->
 					<p><span id="email_result"></span></p>
 
 					<!--Address and City Result-->
-					<p><span id="addcity_result"></span></p>
+					<p><span id="address_result"></span>,&#160;<span id="city_result"></span>,</p>
 
 					<!--Province and Postal Code Result-->
-					<p><span id="provcode_result"></span></p>
+					<p><span id="province_result"></span>,&#160;<span id="postal_result"></span></p>
 				</div>
 				<!--Profile Transfer Ends Here-->	
 			</section>
