edited html text, did mobile styling

--- a/lib2024/final/index.html
+++ b/lib2024/final/index.html
@@ -41,7 +41,7 @@
 		</nav>
 		<!--End of Header Navigation-->
 		
-		<div class="mobile-menu-bars"></div>
+		<div class="mob-bars"></div>
 
 		<!--Mobile Navigation Code Starts Here-->
 		<div class="mobile-nav-container clearfix">
