added lorem ipsum text

--- a/lib2024/final/index.html
+++ b/lib2024/final/index.html
@@ -77,11 +77,14 @@
 				<p>
 					Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis rutrum mauris eu leo venenatis, ac suscipit lectus suscipit. Ut elementum sagittis leo, in varius ante volutpat vitae. Quisque tempor congue convallis. Morbi tristique metus posuere bibendum finibus. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Donec venenatis, orci ut tincidunt aliquet, velit dolor finibus tellus, vitae consequat neque purus in velit. In hac habitasse platea dictumst.
 				</p>
+				<p>
+					Nam non nunc leo. Fusce placerat ipsum nec ex dapibus, ut pretium urna fringilla. Duis lobortis a ex ac varius. Duis vitae efficitur libero. Fusce hendrerit dolor a felis aliquet, eget egestas lacus dictum. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Aliquam rutrum nec magna vitae vulputate. Sed dapibus diam dui, vitae vestibulum eros volutpat quis. Integer quis dui tincidunt urna sollicitudin ultrices et sed leo. Integer finibus massa sed nisl viverra lacinia. Etiam in libero quis sapien posuere mattis. Duis pellentesque, nunc quis condimentum pulvinar, nulla justo malesuada risus, a varius nisi nisl ut dui. Proin eget euismod enim. 
+				</p>
 			</section>
 			<!--End of Main Content-->
 
 			<!--Image Aside Code Begins Here-->
-			<aside>
+			<aside id="img-aside">
 				<div class="ostrich-img">
 					<img src="img/ostrich.jpg" alt="Image of Ostrich Face" width="330px" height="230px">
 				</div>
