--- a/lib2024/final/index.html
+++ b/lib2024/final/index.html
@@ -22,7 +22,7 @@
 
 		<!--Header Navigation Code Starts Here-->
 		<nav class="main-nav-container desktop-nav">
-			<ul class="main-nav clearfix">
+			<ul class="main-nav clearfix text">
 				<li>
 					<a href="https://www.orbitalollie.com/home">Home</a>
 				</li>
@@ -45,7 +45,7 @@
 
 		<!--Mobile Navigation Code Starts Here-->
 		<div class="mobile-nav-container clearfix">
-			<nav class="main-nav-container mobile-nav">
+			<nav class="main-nav-container mobile-nav text">
 				<ul class="main-nav">
 					<li>
 						<a href="https://www.orbitalollie.com/home">Home</a>
@@ -72,11 +72,12 @@
 		<article class="col-main-article site-content">
 
 			<!--Main Content Code Begins Here-->
-			<section class="main-section">
+			<section class="main-section text">
 				<h2>About Ollie</h2>
 				<p>
 					Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis rutrum mauris eu leo venenatis, ac suscipit lectus suscipit. Ut elementum sagittis leo, in varius ante volutpat vitae. Quisque tempor congue convallis. Morbi tristique metus posuere bibendum finibus. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Donec venenatis, orci ut tincidunt aliquet, velit dolor finibus tellus, vitae consequat neque purus in velit. In hac habitasse platea dictumst.
 				</p>
+				<br>
 				<p>
 					Nam non nunc leo. Fusce placerat ipsum nec ex dapibus, ut pretium urna fringilla. Duis lobortis a ex ac varius. Duis vitae efficitur libero. Fusce hendrerit dolor a felis aliquet, eget egestas lacus dictum. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Aliquam rutrum nec magna vitae vulputate. Sed dapibus diam dui, vitae vestibulum eros volutpat quis. Integer quis dui tincidunt urna sollicitudin ultrices et sed leo. Integer finibus massa sed nisl viverra lacinia. Etiam in libero quis sapien posuere mattis. Duis pellentesque, nunc quis condimentum pulvinar, nulla justo malesuada risus, a varius nisi nisl ut dui. Proin eget euismod enim. 
 				</p>
@@ -92,7 +93,7 @@
 			<!--End of Image Aside-->
 
 			<!--Schedule Section Code Begins Here-->
-			<section class="schedule-section">
+			<section class="schedule-section text">
 				<h2>Schedule</h2>
 				<table class="sched-table">
 					<thead>
@@ -144,64 +145,68 @@
 			<!--End of Schedule Section-->
 
 			<!--Profile Section Code Begins Here-->
-			<section class="profile-value-transfer cleafix">
-				<h2>Edit Profile</h2>
-				<form id="form" action="submit.php" method="post">
-					<!--Name Input-->
-					<p>
-						<label for="name">Name:</label>
-						<input type="text" name="name" id="name" placeholder="Ollie Ostrich" required>
-					</p>
+			<section class="profile-form cleafix text">
+				<div id="form-info">
+					<h2>Edit Profile</h2>
+					<form id="form" action="submit.php" method="post">
+						<!--Name Input-->
+						<p>
+							<label for="name">Name:</label>
+							<input type="text" name="name" id="name" placeholder="Ollie Ostrich" required>
+						</p>
 
-					<!--Email Input-->
-					<p>
-						<label for="email">Email:</label>
-						<input type="email" name="email" id="email" placeholder="ollieostrich@outlook.com" required>
-					</p>
+						<!--Email Input-->
+						<p>
+							<label for="email">Email:</label>
+							<input type="email" name="email" id="email" placeholder="ollieostrich@outlook.com" required>
+						</p>
 
-					<!--Address Input-->
-					<p>
-						<label for="address">Address:</label>
-						<input type="text" name="address" id="address" placeholder="6969 Avian Alley" required>
-					</p>
+						<!--Address Input-->
+						<p>
+							<label for="address">Address:</label>
+							<input type="text" name="address" id="address" placeholder="6969 Avian Alley" required>
+						</p>
 
-					<!--City Input-->
-					<p>
-						<label for="city">City:</label>
-						<input type="text" name="city" id="city" placeholder="Pigeon Island" required>
-					</p>
+						<!--City Input-->
+						<p>
+							<label for="city">City:</label>
+							<input type="text" name="city" id="city" placeholder="Pigeon Island" required>
+						</p>
 
-					<!--Province Input-->
-					<p>
-						<label for="province">Province</label>
-						<select name="province" id="province" required>
-							<option value="default">Select Province</option>
-							<option value="BC">British Columbia</option>
-							<option value="AB">Alberta</option>
-							<option value="SK">Saskatchewan</option>
-							<option value="MB">Manitoba</option>
-							<option value="ON">Ontario</option>
-							<option value="YT">Yukon</option>
-							<option value="NT">Northwest Territories</option>
-							<option value="NU">Nunavut</option>
-							<option value="NB">New Brunswick</option>
-							<option value="NS">Nova Scotia</option>
-							<option value="PE">Prince Edward Island</option>
-							<option value="NL">Newfoundland and Labrador</option>
-						</select>
-					</p>
+						<!--Province Input-->
+						<p>
+							<label for="province">Province</label>
+							<select name="province" id="province" required>
+								<option value="default">Select Province</option>
+								<option value="BC">British Columbia</option>
+								<option value="AB">Alberta</option>
+								<option value="SK">Saskatchewan</option>
+								<option value="MB">Manitoba</option>
+								<option value="ON">Ontario</option>
+								<option value="YT">Yukon</option>
+								<option value="NT">Northwest Territories</option>
+								<option value="NU">Nunavut</option>
+								<option value="NB">New Brunswick</option>
+								<option value="NS">Nova Scotia</option>
+								<option value="PE">Prince Edward Island</option>
+								<option value="NL">Newfoundland and Labrador</option>
+							</select>
+						</p>
 
-					<!--Postal Code Input-->
-					<p>
-						<label for="postal">Postal Code</label>
-						<input type="text" name="postal" pattern="[A-Za-z][0-9][A-Za-z] [0-9][A-Za-z][0-9]" value="" name="postal" id="postal" placeholder="Q0Q O3O" required>
-					</p>
+						<!--Postal Code Input-->
+						<p>
+							<label for="postal">Postal Code</label>
+							<input type="text" name="postal" pattern="[A-Za-z][0-9][A-Za-z] [0-9][A-Za-z][0-9]" value="" name="postal" id="postal" placeholder="Q0Q O3O" required>
+						</p>
 
-					<!--Submit Button-->
-					<button type="submit">Submit</button>
-				</form>
+						<!--Submit Button-->
+						<button type="submit">Submit</button>
+					</form>
+				</div>
+			</section>
 
-				<!--Profile Transfer Code Begins Here-->
+			<!--Profile Transfer Code Begins Here-->
+			<section class="profile-transf clearfix text">
 				<h2>Profile Info</h2>
 				<div id="fresults">
 					<img src="img/ostrich2.jpg" alt="Surprised Ostrich Profile Picture" width="300px" height="165px">
@@ -215,8 +220,7 @@
 
 					<!--Province and Postal Code Result-->
 					<p><span id="province_result"></span>,&#160;<span id="postal_result"></span></p>
-				</div>
-				<!--Profile Transfer Ends Here-->	
+				</div>	
 			</section>
 			<!--Profile Section Ends-->
 		</article>
@@ -225,7 +229,7 @@
 	<!--Main Body Ends Here-->
 
 	<!--Footer Code Begins Here-->
-	<footer class="footer" id="footer">
+	<footer class="footer text" id="footer">
 		<div class="footer-container">
 
 			<!--Quick Links Code Begins Here-->
