edited text colouring

--- a/lib2024/final/index.html
+++ b/lib2024/final/index.html
@@ -216,10 +216,10 @@
 					<p><span id="email_result"></span></p>
 
 					<!--Address and City Result-->
-					<p><span id="address_result"></span>,&#160;<span id="city_result"></span>,</p>
+					<p><span id="address_result"></span>&#44;&#160;<span id="city_result"></span>&#44;</p>
 
 					<!--Province and Postal Code Result-->
-					<p><span id="province_result"></span>,&#160;<span id="postal_result"></span></p>
+					<p><span id="province_result"></span>&#44;&#160;<span id="postal_result"></span></p>
 				</div>	
 			</section>
 			<!--Profile Section Ends-->
@@ -230,12 +230,12 @@
 
 	<!--Footer Code Begins Here-->
 	<footer class="footer text" id="footer">
-		<div class="footer-container">
+		<div class="footer-container foot-text">
 
 			<!--Quick Links Code Begins Here-->
 			<section class="col-footer company-info">
 				<h4>Quick Links</h4>
-				<nav class="footer-nav">
+				<nav id="footer-nav">
 					<ul>
 						<li>
 							<a href="https://www.orbitalollie.com/schedule">Schedule</a>
@@ -257,7 +257,7 @@
 			<!--Social Media Links Code Begins Here-->
 			<section class="col-footer social-media">
 				<h4>Follow Us</h4>
-				<nav>	
+				<nav id="socials-nav">	
 					<ul>
 						<!--Facebook Link-->
 						<li>
