added colours to palette

--- a/lib2024/final/sss.html
+++ b/lib2024/final/sss.html
@@ -120,7 +120,14 @@
 				<td>1</td>
 			</tr>
 			<tr>
-				<td>Grey</td>
+				<td>Light Grey</td>
+				<td>Table</td>
+				<td>Accent</td>
+				<td>#efefef</td>
+				<td>RGB(239,239,239)</td>
+			</tr>
+			<tr>
+				<td>Dark Grey</td>
 				<td>Footer</td>
 				<td>Accent</td>
 				<td>#454545</td>
