edited colour classes

--- a/lib2024/final/index.html
+++ b/lib2024/final/index.html
@@ -96,7 +96,7 @@
 			<section class="schedule-section text">
 				<h2>Schedule</h2>
 				<table class="sched-table">
-					<thead>
+					<thead class="wht-row">
 						<tr>
 							<td>Time</td>
 							<td>Monday</td>
@@ -107,7 +107,7 @@
 						</tr>
 					</thead>
 					<tbody>
-						<tr>
+						<tr class="lg-row">
 							<td>09:00-11:00</td>
 							<td>Communications I</td>
 							<td>Client Services</td>
@@ -123,7 +123,7 @@
 							<td>French</td>
 							<td>Reference</td>
 						</tr>
-						<tr>
+						<tr class="lg-row">
 							<td>2:00-3:00</td>
 							<td>Acquisitions</td>
 							<td>Cataloguing</td>
