edited classes and ids

--- a/lib2024/final/index.html
+++ b/lib2024/final/index.html
@@ -175,7 +175,7 @@
 
 						<!--Province Input-->
 						<p>
-							<label for="province">Province</label>
+							<label for="province">Province:</label>
 							<select name="province" id="province" required>
 								<option value="default">Select Province</option>
 								<option value="BC">British Columbia</option>
@@ -195,7 +195,7 @@
 
 						<!--Postal Code Input-->
 						<p>
-							<label for="postal">Postal Code</label>
+							<label for="postal">Postal Code:</label>
 							<input type="text" name="postal" pattern="[A-Za-z][0-9][A-Za-z] [0-9][A-Za-z][0-9]" value="" name="postal" id="postal" placeholder="Q0Q O3O" required>
 						</p>
 
@@ -233,9 +233,9 @@
 		<div class="footer-container foot-text">
 
 			<!--Quick Links Code Begins Here-->
-			<section class="col-footer company-info">
+			<section class="col-footer quick-links">
 				<h4>Quick Links</h4>
-				<nav id="footer-nav">
+				<nav id="quick-nav">
 					<ul>
 						<li>
 							<a href="https://www.orbitalollie.com/schedule">Schedule</a>
