--- a/lib2024/final/index.html
+++ b/lib2024/final/index.html
@@ -4,6 +4,7 @@
 	<title>Final Assignment</title>
 
 	<!--External Style Sheet Link-->
+
 	<link rel="stylesheet" type="text/css" href="css/style.css">
 
 	<meta charset="utf-8">
@@ -18,24 +19,24 @@
 
 <!--Header Code Starts Here-->
 	<header>
-		<div class="logo spec-font">Orbital Ollie </div>
+		<div class="logo spec-font">ORBITAL OLLIE</div>
 
 		<!--Header Navigation Code Starts Here-->
 		<nav class="main-nav-container desktop-nav">
 			<ul class="main-nav clearfix text">
 				<li>
-					<a href="https://www.orbitalollie.com/home">Home</a>
+					<a href="https://www.orbitalollie.com/home">HOME</a>
 				</li>
 				<li>
-					<a href="https://www.orbitalollie.com/about">About</a>
+					<a href="https://www.orbitalollie.com/about">ABOUT</a>
 				</li><li>
-					<a href="https://www.orbitalollie.com/scheduke">Schedule</a>
+					<a href="https://www.orbitalollie.com/scheduke">SCHEDULE</a>
 				</li>
 				<li>
-					<a href="https://www.orbitalollie.com/portfolio">Portfolio</a>
+					<a href="https://www.orbitalollie.com/portfolio">PORTFOLIO</a>
 				</li>
 				<li>
-					<a href="https://www.orbitalollie.com/contact">Contact</a>
+					<a href="https://www.orbitalollie.com/contact">CONTACT</a>
 				</li>
 			</ul>	
 		</nav>
@@ -48,16 +49,16 @@
 			<nav class="main-nav-container mobile-nav text">
 				<ul class="main-nav">
 					<li>
-						<a href="https://www.orbitalollie.com/home">Home</a>
+						<a href="https://www.orbitalollie.com/home">HOME</a>
 					</li>
 					<li>
-						<a href="https://www.orbitalollie.com/about">About</a>
+						<a href="https://www.orbitalollie.com/about">ABOUT</a>
 					</li>
 					<li>
-						<a href="https://www.orbitalollie.com/schedule">Schedule</a>
+						<a href="https://www.orbitalollie.com/schedule">SCHEDULE</a>
 					</li>
 					<li>
-						<a href="https://www.orbitalollie.com/contact">Contact</a>
+						<a href="https://www.orbitalollie.com/contact">CONTACT</a>
 					</li>
 				</ul>
 			</nav>
@@ -73,7 +74,7 @@
 
 			<!--Main Content Code Begins Here-->
 			<section class="main-section text">
-				<h2>About Ollie</h2>
+				<h2>ABOUT OLLIE</h2>
 				<p>
 					Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis rutrum mauris eu leo venenatis, ac suscipit lectus suscipit. Ut elementum sagittis leo, in varius ante volutpat vitae. Quisque tempor congue convallis. Morbi tristique metus posuere bibendum finibus. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Donec venenatis, orci ut tincidunt aliquet, velit dolor finibus tellus, vitae consequat neque purus in velit. In hac habitasse platea dictumst.
 				</p>
@@ -94,7 +95,7 @@
 
 			<!--Schedule Section Code Begins Here-->
 			<section class="schedule-section text">
-				<h2>Schedule</h2>
+				<h2>SCHEDULE</h2>
 				<table class="sched-table">
 					<thead class="wht-row">
 						<tr>
@@ -147,7 +148,7 @@
 			<!--Profile Section Code Begins Here-->
 			<section class="profile-form cleafix text">
 				<div id="form-info">
-					<h2>Edit Profile</h2>
+					<h2>EDIT PROFILE</h2>
 					<form id="form" action="submit.php" method="post">
 						<!--Name Input-->
 						<p>
@@ -207,7 +208,7 @@
 
 			<!--Profile Transfer Code Begins Here-->
 			<section class="profile-transf clearfix text">
-				<h2>Profile Info</h2>
+				<h2>PROFILE INFO</h2>
 				<div id="fresults">
 					<img src="img/ostrich2.jpg" alt="Surprised Ostrich Profile Picture" width="300px" height="165px">
 					<!--Name Result-->
@@ -234,20 +235,20 @@
 
 			<!--Quick Links Code Begins Here-->
 			<section class="col-footer quick-links">
-				<h4>Quick Links</h4>
+				<h4>QUICK LINKS</h4>
 				<nav id="quick-nav">
-					<ul>
+					<ul class="">
 						<li>
-							<a href="https://www.orbitalollie.com/schedule">Schedule</a>
+							<a href="https://www.orbitalollie.com/schedule">SCHEDULE</a>
 						</li>
 						<li>
-							<a href="https://www.orbitalollie.com/about">About</a>
+							<a href="https://www.orbitalollie.com/about">ABOUT</a>
 						</li>
 						<li>
-							<a href="https://www.orbitalollie.com/portfolio">Portfolio</a>
+							<a href="https://www.orbitalollie.com/portfolio">PORTFOLIO</a>
 						</li>
 						<li>
-							<a href="https://www.orbitalollie.com/contact">Contact</a>
+							<a href="https://www.orbitalollie.com/contact">CONTACT</a>
 						</li>
 					</ul>
 				</nav>
@@ -256,7 +257,7 @@
 
 			<!--Social Media Links Code Begins Here-->
 			<section class="col-footer social-media">
-				<h4>Follow Us</h4>
+				<h4>FOLLOW US</h4>
 				<nav id="socials-nav">	
 					<ul>
 						<!--Facebook Link-->
@@ -286,7 +287,7 @@
 
 			<!--Address Information Code Begins Here-->
 			<section class="col-footer footer-address">
-				<h4>Address</h4>
+				<h4>ADDRESS</h4>
 				<address>
 					<p>6969 Avian Alley</p>
 					<p>Pigeon Island, ON Q0Q O3O</p>
