edited classes, fixed header

--- a/lib2024/final/index.html
+++ b/lib2024/final/index.html
@@ -211,10 +211,12 @@
 				<h2>PROFILE INFO</h2>
 				<div id="fresults">
 					<img src="img/ostrich2.jpg" alt="Surprised Ostrich Profile Picture" width="300px" height="165px">
+
 					<!--Name Result-->
 					<p><span id="name_result"></span></p>
+
 					<!--Email Result-->
-					<p><span id="email_result"></span></p>
+					<p><a href="#" id="email_result"></a></p>
 
 					<!--Address and City Result-->
 					<p><span id="address_result"></span>&#44;&#160;<span id="city_result"></span>&#44;</p>
