edited classes and ids, fixed header, worked on footer

--- a/lib2024/final/index.html
+++ b/lib2024/final/index.html
@@ -23,7 +23,7 @@
 
 		<!--Header Navigation Code Starts Here-->
 		<nav class="main-nav-container desktop-nav">
-			<ul class="main-nav clearfix text">
+			<ul class="main-nav clearfix">
 				<li>
 					<a href="https://www.orbitalollie.com/home">HOME</a>
 				</li>
@@ -46,7 +46,7 @@
 
 		<!--Mobile Navigation Code Starts Here-->
 		<div class="mobile-nav-container clearfix">
-			<nav class="main-nav-container mobile-nav text">
+			<nav class="main-nav-container mobile-nav">
 				<ul class="main-nav">
 					<li>
 						<a href="https://www.orbitalollie.com/home">HOME</a>
@@ -73,7 +73,7 @@
 		<article class="col-main-article site-content">
 
 			<!--Main Content Code Begins Here-->
-			<section class="main-section text">
+			<section class="main-section">
 				<h2>ABOUT OLLIE</h2>
 				<p>
 					Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis rutrum mauris eu leo venenatis, ac suscipit lectus suscipit. Ut elementum sagittis leo, in varius ante volutpat vitae. Quisque tempor congue convallis. Morbi tristique metus posuere bibendum finibus. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Donec venenatis, orci ut tincidunt aliquet, velit dolor finibus tellus, vitae consequat neque purus in velit. In hac habitasse platea dictumst.
@@ -94,7 +94,7 @@
 			<!--End of Image Aside-->
 
 			<!--Schedule Section Code Begins Here-->
-			<section class="schedule-section text">
+			<section class="schedule-section">
 				<h2>SCHEDULE</h2>
 				<table class="sched-table">
 					<thead class="wht-row">
@@ -146,7 +146,7 @@
 			<!--End of Schedule Section-->
 
 			<!--Profile Section Code Begins Here-->
-			<section class="profile-form cleafix text">
+			<section class="profile-form cleafix">
 				<div id="form-info">
 					<h2>EDIT PROFILE</h2>
 					<form id="form" action="submit.php" method="post">
@@ -232,14 +232,14 @@
 	<!--Main Body Ends Here-->
 
 	<!--Footer Code Begins Here-->
-	<footer class="footer text" id="footer">
-		<div class="footer-container foot-text">
+	<footer class="footer" id="footer">
+		<div class="footer-container clearfix">
 
 			<!--Quick Links Code Begins Here-->
 			<section class="col-footer quick-links">
 				<h4>QUICK LINKS</h4>
 				<nav id="quick-nav">
-					<ul class="">
+					<ul>
 						<li>
 							<a href="https://www.orbitalollie.com/schedule">SCHEDULE</a>
 						</li>
@@ -258,12 +258,12 @@
 			<!--Quick Links Ends Here-->
 
 			<!--Social Media Links Code Begins Here-->
-			<section class="col-footer social-media">
+			<section class="col-footer social-media" id="social-media">
 				<h4>FOLLOW US</h4>
 				<nav id="socials-nav">	
 					<ul>
 						<!--Facebook Link-->
-						<li>
+						<li id="socials-li">
 							<div id="facebook-li" class="col-footer">
 								<a href="https://www.facebook.com"><img src="img/facebook.png" alt="Facebook Logo"></a>
 							</div>
