added font awesome, edited widths

--- a/lib2024/final/index.html
+++ b/lib2024/final/index.html
@@ -5,6 +5,8 @@
 
 	<!--External Style Sheet Link-->
 
+	<script src="https://kit.fontawesome.com/9370306a71.js" crossorigin="anonymous"></script>
+
 	<link rel="stylesheet" type="text/css" href="css/style.css">
 
 	<meta charset="utf-8">
@@ -210,7 +212,7 @@
 			<section class="profile-transf clearfix text">
 				<h2>PROFILE INFO</h2>
 				<div id="fresults">
-					<img src="img/ostrich2.jpg" alt="Surprised Ostrich Profile Picture" width="300px" height="165px">
+					<img src="img/ostrich2.jpg" alt="Surprised Ostrich Profile Picture">
 
 					<!--Name Result-->
 					<p><span id="name_result"></span></p>
@@ -265,21 +267,21 @@
 						<!--Facebook Link-->
 						<li id="socials-li">
 							<div id="facebook-li" class="col-footer">
-								<a href="https://www.facebook.com"><img src="img/facebook.png" alt="Facebook Logo"></a>
+								<a href="https://www.facebook.com"><i class="fab fa-facebook"></i></a>
 							</div>
 						</li>
 
 						<!--Youtube Link-->
 						<li>
 							<div id="youtube-li" class="col-footer">
-								<a href="https://www.youtube.com"><img src="img/youtube.png" alt="Youtube Logo"></a>
+								<a href="https://www.youtube.com"><i class="fab fa-youtube"></i></a>
 							</div>
 						</li>
 
 						<!--Twitter link-->
 						<li>
 							<div id="twitter-li" class="col-footer">
-								<a href="https://www.twitter.com"><img src="img/twitter.png" alt="Twitter Logo"></a>
+								<a href="https://www.twitter.com"><i class="fab fa-twitter"></i></a>
 							</div>
 						</li>
 					</ul>
