edited code, validated sss

--- a/lib2024/final/sss.html
+++ b/lib2024/final/sss.html
@@ -101,7 +101,7 @@
 				<td>Primary</td>
 				<td>#000000</td>
 				<td>(0,0,0)</td>
-				<td>1</tr>
+				<td>1</td>
 			</tr>
 			<tr>
 				<td>Teal</td>
@@ -120,11 +120,20 @@
 				<td>1</td>
 			</tr>
 			<tr>
+				<td>Purple</td>
+				<td>Loader</td>
+				<td>Accent</td>
+				<td>#9572ae</td>
+				<td>RGB(149,114,174)</td>
+				<td>1</td>
+			</tr>
+			<tr>
 				<td>Light Grey</td>
 				<td>Table</td>
 				<td>Accent</td>
 				<td>#efefef</td>
 				<td>RGB(239,239,239)</td>
+				<td>1</td>
 			</tr>
 			<tr>
 				<td>Dark Grey</td>
@@ -147,10 +156,12 @@
 	<h3>Fonts:</h3>
 	<table>
 		<thead style="text-align: center;">
-			<th>Name</th>
-			<th>Use</th>
-			<th>Size</th>
-			<th>Weight</th>
+			<tr>
+				<th>Name</th>
+				<th>Use</th>
+				<th>Size</th>
+				<th>Weight</th>
+			</tr>
 		</thead>
 		<tbody>
 			<tr>
